--- a/src/Yggdrasil/Yggdrasil.NET.csproj
+++ b/src/Yggdrasil/Yggdrasil.NET.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>0.2.0</Version>
+    <Version>0.2.1</Version>
     <Authors>Luke Parker</Authors>
     <Company>Minecraft .NET Core</Company>
     <Description>Async wrapper to the Mojang Authentication system</Description>
@@ -14,7 +14,7 @@
     <RepositoryUrl>https://github.com/Minecraft-NET-Core/Yggdrasil</RepositoryUrl>
     <PackageTags>Minecraft</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageReleaseNotes>Actually works now</PackageReleaseNotes>
+    <PackageReleaseNotes>Adjusted namespace</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
